fixed course list display on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -130,10 +130,73 @@ span {
     display: none;
 }
 
+.course-list-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.course-group-items {
+    display: flex;
+    border-bottom: 2px saddlebrown solid;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 1rem 0.2rem;
+}
+.course-list-items {
+    color: var(--text-light);
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 1.2rem;
+    padding: 2rem;
+    flex-wrap: wrap;
+}
+
+.group-item {
+    padding: 0.5rem 2.5rem;
+    margin: 0.3rem;
+    background-color: var(--text-dark);
+    color: var(--text-light);
+    border-radius: 0.4rem;
+    cursor: pointer;
+}
+
+.course-item {
+    padding: 0.5rem 2rem;
+    background-color: var(--accent-color-1);
+    border-radius: 0.4rem;
+}
+
+.completed {
+    background-color: var(--primary-color);
+}
+
+.completed::before {
+    content: '✔ ';
+}
+
+#credit {
+    color: var(--text-dark);
+}
+
+header img {
+    width: 100px;
+}
+
+.profile-header {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0.4rem;
+}
+
+.flag {
+    width: 150px;
+}
+
 @media (max-width: 768px) {
     body {
         display: flex;
         flex-direction: column;
+        margin: 0;
     }
 
     main {
@@ -163,65 +226,13 @@ span {
         padding: 0;
         padding-bottom: 1rem;
     }
-}
-
-.course-list-container {
-    display: flex;
-    flex-direction: column;
-}
-
-.course-group-items {
-    display: flex;
-    border-bottom: 2px saddlebrown solid;
-    justify-content: center;
-    align-items: flex-start;
-}
-.course-list-items {
-    color: var(--text-light);
-    display: flex;
-    gap: 2rem;
-    margin-bottom: 1.2rem;
-    padding: 2rem;
-    flex-wrap: wrap;
-}
-
-.group-item {
-    padding: 0.5rem 2.5rem;
-    margin: 0.3rem;
-    background-color: var(--text-dark);
-    color: var(--text-light);
-    border-radius: 0.4rem;
-    cursor: pointer;
-}
-
-.course-item {
-    padding: 0.5rem 2.5rem;
-    background-color: var(--accent-color-1);
-    border-radius: 0.4rem;
-}
-
-.completed {
-    background-color: var(--primary-color);
-}
-
-.completed::before {
-    content: '✔ ';
-}
-
-#credit {
-    color: var(--text-dark);
-}
-
-header img {
-    width: 100px;
-}
-
-.profile-header {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 0.4rem;
-}
-
-.flag {
-    width: 150px;
+    .course-list-items {
+        flex-direction: column;
+        gap: 0.5rem;
+        padding: 10px;
+    }
+    .course-list {
+        padding: 2px 2px;
+        margin: 0;
+    }
 }
